crates/doodle-core/tests/snapshots/lang_corpus__L3_6_4_spec_b06.snap
---
source: crates/doodle-core/tests/lang_corpus.rs
expression: parsed.ast
---
Ast {
    nodes: [
        Module {
            stmts: [],
            doc: Some(
                Span {
                    start: 0,
                    end: 33,
                },
            ),
        },
    ],
    spans: [
        Span {
            start: 33,
            end: 33,
        },
    ],
    root: Some(
        NodeId(
            0,
        ),
    ),
}
