crates/doodle-core/tests/snapshots/lang_corpus__L4_14_spec_b11.snap
---
source: crates/doodle-core/tests/lang_corpus.rs
expression: parsed.ast
---
Ast {
    nodes: [
        Ident(
            "Point",
        ),
        IntLit(
            3,
        ),
        IntLit(
            4,
        ),
        Call {
            callee: NodeId(
                0,
            ),
            args: [
                Keyword {
                    name: "x",
                    value: NodeId(
                        1,
                    ),
                },
                Keyword {
                    name: "y",
                    value: NodeId(
                        2,
                    ),
                },
            ],
            block: None,
        },
        Let {
            name: "a",
            value: NodeId(
                3,
            ),
        },
        Ident(
            "a",
        ),
        Let {
            name: "b",
            value: NodeId(
                5,
            ),
        },
        Ident(
            "b",
        ),
        Field {
            object: NodeId(
                7,
            ),
            name: "x",
        },
        IntLit(
            10,
        ),
        Assign {
            target: NodeId(
                8,
            ),
            value: NodeId(
                9,
            ),
        },
        Module {
            stmts: [
                NodeId(
                    4,
                ),
                NodeId(
                    6,
                ),
                NodeId(
                    10,
                ),
            ],
            doc: None,
        },
    ],
    spans: [
        Span {
            start: 8,
            end: 13,
        },
        Span {
            start: 17,
            end: 18,
        },
        Span {
            start: 23,
            end: 24,
        },
        Span {
            start: 8,
            end: 25,
        },
        Span {
            start: 0,
            end: 25,
        },
        Span {
            start: 34,
            end: 35,
        },
        Span {
            start: 26,
            end: 35,
        },
        Span {
            start: 59,
            end: 60,
        },
        Span {
            start: 59,
            end: 62,
        },
        Span {
            start: 65,
            end: 67,
        },
        Span {
            start: 59,
            end: 67,
        },
        Span {
            start: 0,
            end: 67,
        },
    ],
    root: Some(
        NodeId(
            11,
        ),
    ),
}
